--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8"
+    "eslint-plugin-react": "^7.31.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
