--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "react/prop-types": 0,
     "indent": ["error", 2],
     "linebreak-style": 1,
-    "quotes": ["error", "double"]
+    "quotes": ["error", "backtick"]
   },
   "parserOptions": {
     "ecmaVersion": 2021,
@@ -27,6 +27,12 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
   }
 }
